# dfine_seg

./: config.yaml  setup.cfg
dfine/: configs.py  dataset.py  dfine.py  model.py
dfine/cli/: __init__.py  train.py  util.py
dfine/modules/: __init__.py  builder.py  criterion.py  decoder.py  dfine.py  matcher.py  utils.py
