[metadata]
name = dfine_seg
author = Benjamin Kiessling
author_email = mittagessen@l.unchti.me
summary = WIP for DFINE integration into kraken
home_page = https://kraken.re
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = Apache
classifier =
    Development Status :: 5 - Production/Stable
        Environment :: Console
        Environment :: GPU
        Intended Audience :: Science/Research
        License :: OSI Approved :: Apache Software License
        Operating System :: POSIX
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3.10
        Programming Language :: Python :: 3.11
        Programming Language :: Python :: 3.12
        Topic :: Scientific/Engineering :: Image Recognition
        Topic :: Scientific/Engineering :: Artificial Intelligence

keywords =
    ocr
    htr

[files]
packages = dfine

[entry_points]
console_scripts =
    dfine = dfine.cli:dfine

[flake8]
max_line_length = 160
exclude = tests/*

[options]
python_requires = >=3.9,<3.13
install_requires =
    kraken
    click>=8.1
    regex
    jinja2~=3.0
    torchvision>=0.8
    torch~=2.8.0
    lightning>=2.4.0
    threadpoolctl~=3.5.0
    torchmetrics[detection]
    rich
