[metadata]
name = dfine_kraken
author = Benjamin Kiessling
author_email = mittagessen@l.unchti.me
summary = Segmentation with D-FINE for kraken
home_page = https://kraken.re
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = Apache
classifier =
    Development Status :: 5 - Production/Stable
        Environment :: Console
        Environment :: GPU
        Intended Audience :: Science/Research
        License :: OSI Approved :: Apache Software License
        Operating System :: POSIX
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3.10
        Programming Language :: Python :: 3.11
        Programming Language :: Python :: 3.12
        Topic :: Scientific/Engineering :: Image Recognition
        Topic :: Scientific/Engineering :: Artificial Intelligence

keywords =
    ocr
    htr

[files]
packages = dfine

[entry_points]
console_scripts =
  dfine = dfine.cli:dfine
ketos.cli =
  dfine_train = dfine.cli.train:train
kraken.models =
  DFINEModel = dfine.dfine:DFINEModel
kraken.lightning_modules =
  dfine = dfine.model:DFINESegmentationModel

[flake8]
max_line_length = 160
exclude = tests/*

[options]
python_requires = >=3.9,<3.13
install_requires =
    kraken @ git+https://github.com/mittagessen/kraken@feature/safetensors_serialization
    torchmetrics[detection]
    rich
